Unbreak the havok of 'Expand Textarea on Use' created by the previous fixes and combine all lessons learned to fix it in Chrome and Firefox in both left and right sidebar orientations. Fuck.

--- a/main.css
+++ b/main.css
@@ -444,10 +444,11 @@ This style is designed for the following browsers, ordered alphabetically:
 		width: 248px !important;
 	}
 
-	.postarea form[name^='post'] table tr {
+	.postarea form[name^='post'] table tr,
+	.postarea form[name^='post'] table td {
 		float: left;
 /*[[ChangeAlign]]*/
-		float: right;
+		float: none;
 /**/
 	}
 /*[[PostForm]]*/
